added task template and view

--- a/fitquest/templates/fitquest/plan_detail.html
+++ b/fitquest/templates/fitquest/plan_detail.html
@@ -58,6 +58,10 @@
                 </ul>
             </div>
 
+            <div class="mt-4 text-center">
+                <a href="{% url 'view_tasks' plan.id %}" class="btn btn-primary">Start Plan</a>
+            </div>
+
             <!-- Back Button -->
             <div class="mt-4 text-center">
                 <a href="{% url 'plan_list' %}" class="btn btn-secondary">Back to Plans</a>
