--- a/static/css/base.css
+++ b/static/css/base.css
@@ -134,6 +134,11 @@ a.category-badge > span.badge:hover {
     color: #872341 !important;
 }
 
+.dynamic-progress-bar {
+    transition: width 0.4s ease;
+    background-color: #28a745; 
+}
+
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
