added due date and ordering of the task

--- a/fitquest/templates/fitquest/plan_list.html
+++ b/fitquest/templates/fitquest/plan_list.html
@@ -41,7 +41,9 @@
             </div>
         </div>
     {% empty %}
-        <p>No active plans available.</p>
+        <div class="mt-4 text-center">
+            <p>No active plans available.</p>
+        </div>
     {% endfor %}
 </div>
 {% endblock %}
